[gd_scene load_steps=7 format=3 uid="uid://crynh4simrdn6"]

[ext_resource type="Script" path="res://02_dynamic.gd" id="1_22xup"]
[ext_resource type="PackedScene" uid="uid://7dn548r8bu4l" path="res://addons/akjava_physical_bone3d/models/simple/simple-hair01.blend" id="2_a2864"]
[ext_resource type="PackedScene" uid="uid://djjmi2bds5pfu" path="res://top_menu.tscn" id="3_dvddj"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5l401"]

[sub_resource type="Sky" id="Sky_8qf5g"]
sky_material = SubResource("ProceduralSkyMaterial_5l401")

[sub_resource type="Environment" id="Environment_xj2kb"]
background_mode = 2
sky = SubResource("Sky_8qf5g")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_22xup")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xj2kb")

[node name="simple-hair01" parent="." instance=ExtResource("2_a2864")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.4)
current = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopMenu" parent="MarginContainer/VBoxContainer" instance=ExtResource("3_dvddj")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Example2 Dynamic
"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start Phycis(Bone1)"

[node name="StopButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop/Reset Physics"

[node name="RagdollButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start Ragdoll Mode(Bone0)"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save Node"

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/RagdollButton" to="." method="_on_ragdoll_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
